# ocaml-valet

./: README.md  dune-project  flake.nix  valet.opam
.github/workflows/: ci.yaml
lib/: dune  valet.ml
test/: dune  test_valet.ml  valet.t
test/examples/: local_function.ml  value.ml
test/examples/bad/: duplicate_val.ml  pattern_with_forall.ml  shadowing.ml  val_after_let.ml  val_separated_from_let.ml  val_with_existing_constraint.ml  val_without_let.ml
test/examples/good/: explicit_forall.ml  external_not_val.ml  gadt_function.ml  let_with_existing_constraint.ml  local_mutual_recursion.ml  local_nested.ml  local_simple.ml  mixed_arities.ml  multiple_params.ml  mutual_recursion.ml  pattern_binding.ml  polymorphic_method.ml  simple_function.ml  val_with_pattern_constraint.ml
